<resources>
    <string name="app_name">DocWay</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Don\'t have account</string>

    <string name="register">Register</string>
    <string name="title_activity_med_app">MedAppActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="doctor">Doctor!</string>
    <string name="service">service</string>
    <string name="appointment">Appointment</string>
    <string name="info_end_drug">Info end Drug</string>
    <string name="help_and_support">Help and Support</string>
    <string name="disconnection">Disconnection</string>
    <string name="todo">TODO</string>
    <string name="string_todo" />
    <string name="doctor_s_name">doctor\'s name</string>
    <string name="phone_s_number">phone\'s number</string>
    <string name="specialty">specialty</string>
    <string name="insert">Insert</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="doctor_list_is_empty">doctor list is empty</string>
    <string name="bap">TODO</string>
    <string name="date">Date</string>
    <string name="appointment_list_is_empty">appointment list is empty</string>
    <string name="calendar">Calendar</string>

</resources>
